# restcli

./: Cargo.toml  README.md  main.go  makefile  request.sh
examples/: backend.postman_collection.json
examples/input/: main.go
src/: main.rs
src/cli/: mod.rs  options.rs  parser.rs
src/cmd/: curl.rs  mod.rs  postman.rs  rest_client.rs
src/cmd/curl/: mod.rs
src/cmd/postman/: helper.rs  mod.rs
src/cmd/rest_client/: helper.rs  mod.rs
src/lang/: golang.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/lang/golang/: gin.rs  mod.rs
src/lang/javascript/: express.rs  mod.rs  nextjs.rs
src/lang/python/: django.rs  fastapi.rs  flask.rs  mod.rs
src/lang/rust/: mod.rs
src/utils/: file.rs  mod.rs  parse_files.rs  regex.rs
test_files/input/: express.js  flask.py  gin.go
test_files/output/: backend.postman_collection.json
